--- a/myapp/client/main.html
+++ b/myapp/client/main.html
@@ -9,7 +9,21 @@
 	<title>OpenSpace</title>
 
 </head>
+
 <body>
+	{{> bookingListTemplate}}
+	{{> hostTemplate}}
+
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbsJ9CgLB2PFRo1-RgSlgahriiL5eNwro&callback=initMap" 
+	type="text/javascript"></script>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+
+<template name="bookingListTemplate">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">OpenSpace</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +49,7 @@
 					<div class="media">
 						<img class="mr-3" src="/images/SampleLayout1.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
 						<div class="media-body">
-							<h5 class="mt-0">1.2 miles away</h5>
+							<h5 class="mt-0">0.4 miles away</h5>
 							<div class="container">
 								<div class="row">
 									<div class="col-sm">
@@ -63,68 +77,134 @@
 								</div>
 							</div>
 						</div>
-						<!--<div class="container">-->
-							<button type="button" class="btn btn-primary">Book</button>
-							<!--</div>-->
-						</div>
-					</li>
-					<li class="list-group-item">
-						<div class="media">
-							<img class="mr-3" src="/images/SampleLayout2.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-							<div class="media-body">
-								<h5 class="mt-0">Media heading</h5>
-								Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. 
+						<button type="button" class="btn btn-primary">Book</button>
+					</div>
+				</li>
+				<li class="list-group-item">
+					<div class="media">
+						<img class="mr-3" src="/images/SampleLayout2.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+						<div class="media-body">
+							<h5 class="mt-0">1.2 miles away</h5>
+							<div class="container">
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-map-marked-alt"></i> Alexander Ave
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-home"></i> Empty Living Room
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-dollar-sign"></i> .08$/sqInch
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-adjust"></i> 120sqft remaining
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-check-circle"></i> OpenSpace Verified
+									</div>
+								</div>
 							</div>
 						</div>
-					</li>
-					<li class="list-group-item">
-						<div class="media">
-							<img class="mr-3" src="/images/SampleLayout3.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-							<div class="media-body">
-								<h5 class="mt-0">Media heading</h5>
-								Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. 
+						<button type="button" class="btn btn-primary">Book</button>
+					</div>
+				</li>
+				<li class="list-group-item">
+					<div class="media">
+						<img class="mr-3" src="/images/SampleLayout3.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+						<div class="media-body">
+							<h5 class="mt-0">1.7 miles away</h5>
+							<div class="container">
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-map-marked-alt"></i> Erwin Road
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-home"></i> Partially Filled Garage
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-dollar-sign"></i> .06$/sqInch
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-adjust"></i> 80sqft remaining
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-check-circle"></i> OpenSpace Verified
+									</div>
+								</div>
 							</div>
 						</div>
-					</li>
-					<li class="list-group-item">
-						<div class="media">
-							<img class="mr-3" src="/images/SampleLayout4.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-							<div class="media-body">
-								<h5 class="mt-0">Media heading</h5>
-								Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. 
+						<button type="button" class="btn btn-primary">Book</button>
+					</div>
+				</li>
+				<li class="list-group-item">
+					<div class="media">
+						<img class="mr-3" src="/images/SampleLayout4.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+						<div class="media-body">
+							<h5 class="mt-0">2.4 miles away</h5>
+							<div class="container">
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-map-marked-alt"></i> Ninth Street
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-home"></i> Small Closet
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-dollar-sign"></i> .04$/sqInch
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm">
+										<i class="fas fa-adjust"></i> 25sqft remaining
+									</div>
+									<div class="col-sm">
+										<i class="fas fa-check-circle"></i> OpenSpace Verified
+									</div>
+								</div>
 							</div>
 						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-6">
-				<!-- Your second column here -->
-				<div id="map"></div>
-				<script>
-				// Initialize and add the map
-				function initMap() {
-						// The location of Uluru
-						var uluru = {lat:35.9940, lng:-78.8986};
-						// The map, centered at Uluru
-						var map = new google.maps.Map(
-							document.getElementById('map'), {zoom: 12, center: uluru});
-						// The marker, positioned at Uluru
-						var marker = new google.maps.Marker({position: uluru, map: map});
-					}
-				</script>
-			</div>
-</div>
-{{> hostTemplate}}
-
-
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbsJ9CgLB2PFRo1-RgSlgahriiL5eNwro&callback=initMap" 
-type="text/javascript"></script>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+						<button type="button" class="btn btn-primary">Book</button>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="col-md-6">
+			<!-- Your second column here -->
+			<div id="map"></div>
+			<script>
+			// Initialize and add the map
+			function initMap() {
+					// The location of Uluru
+					var uluru = {lat:35.9940, lng:-78.8986};
+					// The map, centered at Uluru
+					var map = new google.maps.Map(
+						document.getElementById('map'), {zoom: 12, center: uluru});
+					// The marker, positioned at Uluru
+					var marker = new google.maps.Marker({position: uluru, map: map});
+				}
+			</script>
+		</div>
+	</div>
+</template>
 
 <template name="hostTemplate">
 	<div class="container">
