added google maps api

--- a/myapp/imports/ui/pages/home/home.html
+++ b/myapp/imports/ui/pages/home/home.html
@@ -1,5 +1,8 @@
 <template name="App_home">
 	<!-- Bootstrap CSS -->
 	{{> navbar}}
+	<div class = "modal-body row">
 	{{> list_items}}
+	{{> map}}
+	</div>
 </template>
